--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,10 @@ spring.liquibase.change-log=classpath:db/db.changelog-master.xml
 spring.liquibase.url=jdbc:postgresql://127.0.0.1:5432/job4j_github_analysis
 spring.liquibase.user=postgres
 spring.liquibase.password=password
+
+spring.task.execution.pool.core-size=1
+spring.task.execution.pool.max-size=5
+spring.task.execution.pool.queue-capacity=10
+
+spring.task.scheduling.pool.size=10
+scheduler.fixedRate=3600000
